# image-transformer

./: MIGRATION.md  README.md  example.csv  index (1).html  index.html  presets.json  transform_swatches.py
.github/workflows/: ci.yml
core-rs/: Cargo.toml  README.md
core-rs/src/: bbox.rs  bg.rs  border.rs  color.rs  crop.rs  lib.rs  main.rs  render.rs  shadow.rs  shapes.rs  types.rs  wasm_entry.rs
fixtures/: README.md  urls_no_header.csv  urls_with_header.csv
schemas/: preset.schema.json
tests/: test_parity.py
web/: README.md
